--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lw8",
   "version": "0.1.0",
-  "homepage": "https://qasmark.github.io/project-business-card.github.io",
+  "homepage": "https://qasmark.github.io/project-business-card",
   "private": true,
   "dependencies": {
     "@fontsource/roboto": "^5.1.0",
@@ -21,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
